Added Eclipse installation instruction on readme. Removed META-INF, module-info.class from Jython standalone dependency to prevent naming conflict